// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NftGridEmpty matches the snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
    }
  }
>
  <Image
    resizeMode="contain"
    source={1}
    style={
      {
        "height": 90,
        "marginBottom": 12,
        "marginTop": 30,
        "tintColor": "lightgray",
        "width": 90,
      }
    }
  />
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#6a737d",
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 18,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginTop": 10,
      }
    }
  >
    No NFTs yet
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    testID="import-collectible-button"
  >
    <Text
      accessibilityRole="text"
      onPress={[Function]}
      style={
        {
          "color": "#0376c9",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Learn more
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`NftGridFooter matches the snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#6a737d",
        "fontFamily": "EuclidCircularB-Medium",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    Don’t see your NFT?
  </Text>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    testID="import-collectible-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#0376c9",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Import NFTs
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`NftGridItem matches the snapshot 1`] = `
<TouchableOpacity
  onLongPress={[Function]}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexBasis": "33%",
      "justifyContent": "center",
      "marginBottom": 10,
      "padding": 10,
    }
  }
  testID="Test NFT"
>
  <View
    style={
      {
        "backgroundColor": undefined,
        "borderRadius": 12,
        "flex": 0,
      }
    }
  >
    <View>
      <Image
        onError={[Function]}
        source={
          {
            "uri": "",
          }
        }
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#f2f4f6",
              "borderRadius": 8,
              "justifyContent": "flex-start",
            },
            {
              "aspectRatio": 1,
              "width": "100%",
            },
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
        testID="fallback-nft-ipfs"
      />
      <View
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#141618",
                "fontFamily": "EuclidCircularB-Regular",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "black",
                "marginTop": 16,
                "textAlign": "center",
              },
            ]
          }
        >
           #1
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#141618",
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    Test NFT
  </Text>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#141618",
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    Test Collection
  </Text>
</TouchableOpacity>
`;
